src/styles/padding.css
/* padding */

.p-0 {
    padding: 0;
}

.p-5 {
    padding: 5px;
}

.p-10 {
    padding: 10px;
}

.p-20 {
    padding: 20px;
}

.p-40px {
    padding: 40px;
}

.p-80px {
    padding: 80px;
}

.pl-5px {
    padding-left: 5px;
}

.pr-5px {
    padding-right: 5px;
}

.pl-10 {
    padding-left: 10px;
}

.pl-20 {
    padding-left: 20px;
}

.pl-40px {
    padding-left: 40px;
}

.p-100px {
    padding: 100px;
}

.pr-10 {
    padding-right: 10px;
}

.pr-20 {
    padding-right: 20px;
}

.pr-40px {
    padding-right: 40px;
}

.pt-40px {
    padding-top: 40px;
}

.pb-40 {
    padding-bottom: 40px;
}

.pt-80 {
    padding-top: 80px;
}

.pt-2px {
    padding-top: 2px;
}

.pb-2px {
    padding-bottom: 2px;
}

